--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="co.edu.uniempresarial.isf6.appmovil.login.ui.notifications.NotificationsFragment"
+        android:name="co.edu.uniempresarial.isf6.appmovil.login.ui.list.UsersFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
