--- a/app/src/main/res/layout/activity_biometrics.xml
+++ b/app/src/main/res/layout/activity_biometrics.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="50dp"
-    tools:context=".MainActivity">
+    tools:context=".Biometrics">
 
     <ImageView
         android:layout_width="200dp"
